--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.8.1+cpu
 torchvision==0.9.1+cpu
-fastai
+fastai==2.2.7
 voila
 ipywidgets
